# T-curve-on-P1xP1

./: .gitignore  CNAME  Cargo.toml  index.html
css/: app.css
for_reference_py/: pxp.py
js/: curve.js
pgpt/: Cargo.toml  index.html
pgpt/js/: script.js
pgpt/src/: lib.rs
pic/: pxp.py
pkg/: package.json  t_curve_pic.d.ts  t_curve_pic.js  t_curve_pic_bg.wasm  t_curve_pic_bg.wasm.d.ts
plot/: Cargo.toml  index.html
plot/src/: lib.rs
src/: lib.rs
